# ai-assistant

./: README.md
android/: Dockerfile  Dockerfile.new  build.sh  cmd.sh  settings.gradle
android/app/: build.gradle
android/app/src/main/: ._AndroidManifest.xml  AndroidManifest.xml
android/app/src/main/assets/: distilgpt2-Q2_K.gguf  gte-small-q8_0.gguf
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  wrapper.cpp
android/app/src/main/java/com/example/llama/: BiometricHelper.java  CloudGenerator.java  ConversationProcessor.java  DebugLogger.java  DownloadTask.java  ExportHelper.java  FileUtils.java  IntentCallback.java  LocalGenerator.java  Logger.java  MainActivity.java  ModelDownloader.java  ModelLoaderHelper.java  ModelManager.java  ModelSelectionFragment.java  NativeBridge.java  ParseCallback.java  ParseQueryCallback.java  SecurityHelper.java  TextGenerator.java  UiManager.java
android/app/src/main/java/com/example/llama/memory/: ConversationLogger.java  MemoryContract.java  MemoryDBHelper.java  MemoryManager.java  SecurityVerifier.java
android/app/src/main/java/com/example/llama/memory/models/: Category.java  ConversationLog.java  ConversationLogPolicy.java  Memory.java  SecurityPolicy.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/xml/: file_paths.xml
android/gradle/wrapper/: gradle-wrapper.properties
test/llama/: CMakeLists_test.txt  Dockerfile  build_and_test.sh  test_llama.cpp
